--- a/server/data/offersedit.html
+++ b/server/data/offersedit.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CafDS Dashboard - Angebote bearbeiten</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <!-- Corrected font weights -->
+ <!-- Corrected font weights -->
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -25,7 +23,7 @@
             <a href="/panel/menu">Speiseplan verwalten/bearbeiten</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/menuentries">Menüeinträge verwalten</a>
+            <a href="/panel/menuentries">Speiseplaneinträge verwalten</a>
         </div>
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
@@ -54,13 +52,19 @@
     <!-- Modal for editing entry -->
     <div id="editModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close" onclick="closeModal()">&times;</span>
             <h2>Eintrag bearbeiten</h2>
             <form id="editForm">
+                <input type="hidden" id="editId" name="id">
                 <label for="editName">Name:</label>
                 <input type="text" id="editName" name="name" required>
                 <label for="editPrice">Preis:</label>
-                <input type="text" id="editPrice" name="price" required>
+                <div style="display: flex; align-items: center;">
+                    <input type="number" id="editEuro" name="euro" min="0" max="9" style="width: 40px;" required>
+                    <span>,</span>
+                    <input type="number" id="editCent" name="cent" min="0" max="99" maxlength="2" style="width: 50px;" required>
+                    <span>€</span>
+                </div>
                 <label for="editImage">Bild:</label>
                 <div class="custom-dropdown">
                     <div class="selected-image" id="selectedImage" onclick="toggleDropdown()">
@@ -70,17 +74,16 @@
                         <!-- Options will be populated dynamically -->
                     </div>
                 </div>
-                <input type="hidden" id="editImage" name="image"> <!-- Hidden input to store the selected image path -->
+                <input type="hidden" id="editImage" name="image">
                 <label for="editDays">Tage:</label>
                 <input type="text" id="editDays" name="days" required>
-                <input type="hidden" id="editId" name="id">
-                <input type="hidden" id="editVisibility" name="visibility"> <!-- Hidden input to store the visibility state -->
+                <input type="hidden" id="editVisibility" name="visibility">
                 <span class="toggleVisibilityTxt">Wird nicht angezeigt</span>
                 <label class="toggle">
                     <input type="checkbox" id="toggleVisibilityBtn">
                     <span class="slider round"></span>
                 </label>
-                <button type="button" id="saveEditBtn">Speichern</button>
+                <button type="submit" id="saveEditBtn">Speichern</button>
             </form>
         </div>
     </div>
@@ -91,110 +94,72 @@
 
             // Function to open the modal
             window.openEditModal = function(item) {
-                console.log("Opening modal for item:", item); // Debugging line
-                document.getElementById("editName").value = item.name; // Set name
-                document.getElementById("editPrice").value = item.price; // Set price
-                document.getElementById("editDays").value = item.days; // Set days
-                document.getElementById("editId").value = item.id; // Set ID
-                document.getElementById("editVisibility").value = item.visibility; // Set visibility state
-                document.getElementById("toggleVisibilityBtn").checked = item.visibility; // Set toggle state
+                document.getElementById("editId").value = item.id;
+                document.getElementById("editName").value = item.name;
+                const euros = Math.floor(item.price);
+                const cents = Math.round((item.price - euros) * 100);
+                document.getElementById('editEuro').value = euros;
+                document.getElementById('editCent').value = cents;
+                document.getElementById("editDays").value = item.days;
+                document.getElementById("editVisibility").value = item.visibility;
+                document.getElementById("toggleVisibilityBtn").checked = item.visibility;
 
-                // Update the visibility text based on the current state
                 const toggleText = document.querySelector('.toggleVisibilityTxt');
                 toggleText.textContent = item.visibility ? 'Wird angezeigt' : 'Wird nicht angezeigt';
 
-                // Clear and fetch images for the dropdown
                 const imageDropdownList = document.getElementById("imageDropdownList");
-                imageDropdownList.innerHTML = ''; // Clear existing options
+                imageDropdownList.innerHTML = '';
 
-                // Fetch images from the server
                 fetch('/api/getImages')
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error(`HTTP error! status: ${response.status}`);
-                        }
-                        return response.json();
-                    })
+                    .then(response => response.json())
                     .then(images => {
-                        const dropdownList = document.getElementById("imageDropdownList");
-                        dropdownList.innerHTML = ''; // Clear existing options
                         images.forEach(image => {
                             const option = document.createElement("div");
-                            option.innerHTML = `<img src="${image}" alt="${image}">`; // Add image to the option
+                            option.innerHTML = `<img src="${image}" alt="${image}">`;
                             option.onclick = function() {
-                                const selectedImagePath = image; // Get the image path directly
-                                document.getElementById("previewImage").src = selectedImagePath; // Set the preview image
-                                document.getElementById("previewImage").style.display = "block"; // Show the preview
-                                document.getElementById("editImage").value = selectedImagePath; // Store the selected image path in the hidden input
-                                console.log("Selected image path:", selectedImagePath); // Log the selected image path
-                                dropdownList.style.display = "none"; // Hide the dropdown
+                                document.getElementById("previewImage").src = image;
+                                document.getElementById("previewImage").style.display = "block";
+                                document.getElementById("editImage").value = image;
+                                imageDropdownList.style.display = "none";
                             };
-                            dropdownList.appendChild(option);
+                            imageDropdownList.appendChild(option);
                         });
 
-                        // Set the current image as selected
                         const currentImage = item.image;
-                        document.getElementById("previewImage").src = currentImage; // Set the preview image
-                        document.getElementById("previewImage").style.display = "block"; // Show the preview
-                        document.getElementById("editImage").value = currentImage; // Set the hidden input with the current image path
+                        document.getElementById("previewImage").src = currentImage;
+                        document.getElementById("previewImage").style.display = "block";
+                        document.getElementById("editImage").value = currentImage;
                     })
-                    .catch(error => {
-                        console.error('Error fetching images:', error);
-                        alert("Could not load images. Please try again later.");
-                    });
+                    .catch(error => console.error('Error fetching images:', error));
 
-                modal.style.display = "flex"; // Show the modal
-
-                // Check for overflow on input fields
-                checkTextOverflow("editName");
-                checkTextOverflow("editPrice");
-                checkTextOverflow("editDays");
+                modal.style.display = "flex";
             };
 
-            // Function to check and adjust text overflow
-            function checkTextOverflow(elementId) {
-                var container = document.getElementById(elementId);
-                let originalFontSize = 14; // Set the original font size in pt
-                const minFontSize = 10; // Set a minimum font size in pt
-
-                // Reset font-size to original
-                container.style.fontSize = `${originalFontSize}pt`;
-
-                // Check if the text is wider than its container
-                while (container.scrollWidth > container.clientWidth && originalFontSize > minFontSize) {
-                    originalFontSize -= 1; // Decrease font size by 1pt
-                    container.style.fontSize = `${originalFontSize}pt`; // Apply new font size
-                }
-            }
-
-            // Close the modal when the close button is clicked
             closeModal.onclick = function() {
-                clearModalFields(); // Clear fields before hiding
-                modal.style.display = "none"; // Hide the modal
+                modal.style.display = "none";
             };
 
-            // Close the modal when clicking outside of it
             window.onclick = function(event) {
                 if (event.target == modal) {
-                    clearModalFields(); // Clear fields before hiding
-                    modal.style.display = "none"; // Hide the modal if clicked outside
+                    modal.style.display = "none";
                 }
             };
 
-            // Save button functionality
-            document.getElementById("saveEditBtn").addEventListener("click", function() {
+            // Handle form submission
+            document.getElementById("editForm").addEventListener("submit", function(event) {
+                event.preventDefault(); // Prevent the default form submission
+
                 const id = document.getElementById("editId").value;
                 const name = document.getElementById("editName").value;
-                const price = document.getElementById("editPrice").value;
-                const image = document.getElementById("editImage").value; // Get the selected image
+                const euro = parseInt(document.getElementById("editEuro").value, 10) || 0;
+                const cent = parseInt(document.getElementById("editCent").value, 10) || 0;
+                const price = euro + cent / 100;
+                const image = document.getElementById("editImage").value;
                 const days = document.getElementById("editDays").value;
-                const visibility = document.getElementById("toggleVisibilityBtn").checked; // Get visibility state
+                const visibility = document.getElementById("toggleVisibilityBtn").checked;
 
-                const data = { id, name, price, image, days, visibility }; // Include visibility in the data
+                const data = { id, name, price, image, days, visibility };
 
-                console.log("Data being sent to server:", data); // Log the data
-
-                // Send the data to the server
                 fetch('/api/editentry', {
                     method: 'POST',
                     headers: {
@@ -204,37 +169,40 @@
                 })
                 .then(response => {
                     if (response.ok) {
-                        clearModalFields(); // Clear fields after saving
-                        modal.style.display = "none"; // Hide the modal
-                        window.location.reload(); // Reload the page to see changes
+                        modal.style.display = "none";
+                        window.location.reload();
                     } else {
-                        alert("Fehler beim Speichern des Eintrags."); // Error message
+                        alert("Fehler beim Speichern des Eintrags.");
                     }
                 })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert("Ein Fehler ist aufgetreten."); // General error message
-                });
+                .catch(error => console.error('Error:', error));
             });
 
-            // Function to clear modal fields
-            function clearModalFields() {
-                document.getElementById("editName").value = '';
-                document.getElementById("editPrice").value = '';
-                document.getElementById("editDays").value = '';
-                document.getElementById("editImage").value = ''; // Clear the hidden input
-                document.getElementById("previewImage").src = ''; // Clear the preview image
-                document.getElementById("previewImage").style.display = "none"; // Hide the preview
-                document.getElementById("toggleVisibilityBtn").checked = false; // Reset toggle state
-                document.querySelector('.toggleVisibilityTxt').textContent = 'Wird nicht angezeigt'; // Reset visibility text
-            }
+            document.getElementById('editEuro').addEventListener('focus', function() {
+                this.select();
+            });
 
-            // Attach input event listeners to check for overflow
-            const inputs = document.querySelectorAll('.modal-content input[type="text"]');
-            inputs.forEach(input => {
-                input.addEventListener('input', () => {
-                    checkTextOverflow(input.id); // Check overflow on input change
-                });
+            document.getElementById('editEuro').addEventListener('input', function() {
+                if (this.value.length >= 1) {
+                    const centField = document.getElementById('editCent');
+                    centField.focus();
+                    centField.select();
+                }
+            });
+
+            document.getElementById('editCent').addEventListener('focus', function() {
+                this.select();
+            });
+
+            document.getElementById('editCent').addEventListener('input', function() {
+                if (this.value.length > 2) {
+                    this.value = this.value.slice(0, 2);
+                }
+            });
+
+            document.getElementById("logoutBtn").addEventListener("click", function() {
+                document.cookie = "token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+                window.location.href = "/ui/login";
             });
         });
 
