--- a/server/data/offers.html
+++ b/server/data/offers.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Cafeteria Angebote</title>
  <!-- Corrected font weights -->
     <style>
@@ -143,5 +142,4 @@
             });
     </script>
 </body>
-
 </html>
