--- a/timestampgen.html
+++ b/timestampgen.html
@@ -4,7 +4,7 @@
 <!-- Random file, ask Felixmax what it means -->
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ses</title>
 </head>
 <body>
