--- a/server/data/dashboard/login.html
+++ b/server/data/dashboard/login.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>CafDS Dashboard - Login</title>
+    <link rel="icon" type="image/x-icon" href="/dashboard/assets/favicon.ico">
+    <link rel="alternate icon" href="/dashboard/assets/favicon.ico">
  <!-- Corrected font weights -->
     <style>
+
 
         body {
             background-color: rgb(36, 36, 36);
@@ -73,7 +76,7 @@
         </div>
 
     <div class="footer">
-        <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype und Felixmax_ 2024</a>
+        <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype und Felixmax_ 2025</a>
     </div>
 
     <script>
