--- a/server/data/dashboard/media.html
+++ b/server/data/dashboard/media.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" type="image/x-icon" href="/dashboard/assets/favicon.ico">
     <title>CafDS Dashboard - Medien verwalten</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/dashboard/styles.css">
 </head>
+
 <body>
     <div class="header">
-        CafDS Dashboard
+        <div class="header-left">
+            <img src="/dashboard/assets/logo.png" alt="CafDS Logo" class="header-logo">
+            <span class="header-title">CafDS Dashboard</span>
+        </div>
         <button id="logoutBtn">Ausloggen</button>
     </div>
     <div class="navbar" id="navbar">
@@ -54,7 +59,7 @@
         </div>
     </div>
     <div class="footer">
-        <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype & Felixmax_ 2024</a>
+        <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype & Felixmax_ 2025</a>
     </div>
     <script>
         document.getElementById("logoutBtn").addEventListener("click", function() {
